fix getPageableListOfProducts